--- a/views/ejs.jade
+++ b/views/ejs.jade
@@ -1,16 +1,24 @@
-<!doctype>
-<html>
-<body>
-<h1><%= title %></h1>
+extends layout
 
-<ul>
-	<% for(var i=0; i < supplies.length; i++) { %>
-		<li>
-			<a href='supplies/<%= supplies[i] %>'>
-				<%= supplies[i] %>
-			</a>
-		</li>
-	<% } %>
-</ul>
-</body>
-</html>
+block content
+	h1 #{title}
+
+	:markdown
+		This used to be an EJS-templated page but it seems much easier to implement 
+		Jade templates instead.
+	ul 
+		for supply in supplies
+			li
+				a(href='supplies/#{supply}')
+					= supply
+
+	:markdown
+		Below is an the same list but implemented with markdown.
+	for supply in supplies
+		:markdown
+			* #{supply}
+
+	p This, obviously, did not work as expected. :(
+	p But, at least, there is now a way to add a horizontal rule. See below.
+	:markdown
+		---
